Add cards for lecture 7

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -1422,4 +1422,355 @@
         \cite{Satz 12.3}
     \end{field}
 \end{note}
+
+%%%%%%%%% Vorlesung 7 %%%%%%%%%%%%
+\begin{note}%TODO
+    \tags{Satz}
+    \xplain{c8642aef-feb0-4273-9657-9874c2229640}
+    \begin{field}
+        \textbf{Spektralsatz\\}
+
+        Sei $(V, \scprod{\cdot}{\cdot})$ ein endlich-dimensionaler euklidischer oder unitärer Vektorraum.
+
+        Zu \hide{jedem selbstadjungierten Endomorphismus} $f$ auf $V$ existiert eine Orthonormalbasis von $V$ aus Eigenvektoren von $f$.
+    \end{field}
+    \begin{field}
+        \textbf{Spektralsatz\\ (Hauptachsentransformation für selbstadj. Abb.)}
+
+        Sei $(V, \scprod{\cdot}{\cdot})$ ein endlich-dimensionaler euklidischer oder unitärer Vektorraum.
+
+        Zu jedem selbstadjungierten Endomorphismus $f$ auf $V$ existiert eine Orthonormalbasis von $V$ aus Eigenvektoren von $f$.
+        \cite{Satz 12.4}
+    \end{field}
+
+    \begin{field}
+        \textbf{Spektralsatz\\ (Hauptachsentransformation für selbstadj. Abb.)}
+
+        Sei $(V, \scprod{\cdot}{\cdot})$ ein endlich-dimensionaler euklidischer oder unitärer Vektorraum.
+
+        Zu jedem selbstadjungierten Endomorphismus $f$ auf $V$ existiert \hide{eine Orthonormalbasis von $V$ aus Eigenvektoren von $f$.}
+    \end{field}
+    \begin{field}
+        \textbf{Spektralsatz\\ (Hauptachsentransformation für selbstadj. Abb.)}
+
+        Sei $(V, \scprod{\cdot}{\cdot})$ ein endlich-dimensionaler euklidischer oder unitärer Vektorraum.
+
+        Zu jedem selbstadjungierten Endomorphismus $f$ auf $V$ existiert eine Orthonormalbasis von $V$ aus Eigenvektoren von $f$.
+        \cite{Satz 12.4}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{c7c37423-b07c-4459-8002-a0327be7c516}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \hide{\textbf{reellen symmetrischen}} Matrix $A$ existiert eine Matrix $S\in\text{O}(n)$ mit
+        \[S^{-1}AS = S^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{reellen symmetrischen} Matrix\\
+         $A\in\Mat_{\RR}(n\times n)$ existiert eine Matrix $S\in\text{O}(n)$ mit
+        \[S^{-1}AS = S^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.5}
+    \end{field}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{reellen symmetrischen} Matrix\\
+        $A\in\Mat_{\RR}(n\times n)$ existiert eine Matrix \hide{$S\in\text{O}(n)$} mit
+        \[S^{-1}AS = S^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{reellen symmetrischen} Matrix\\
+        $A\in\Mat_{\RR}(n\times n)$ existiert eine Matrix $S\in\text{O}(n)$ mit
+        \[S^{-1}AS = S^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.5}
+    \end{field}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{reellen symmetrischen} Matrix\\
+        $A\in\Mat_{\RR}(n\times n)$ existiert eine Matrix $S\in\text{O}(n)$ mit \dots
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{reellen symmetrischen} Matrix\\
+        $A\in\Mat_{\RR}(n\times n)$ existiert eine Matrix $S\in\text{O}(n)$ mit
+        \[S^{-1}AS = S^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.5}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{6b695356-9bb9-415a-b938-df47fa36982d}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \hide{\textbf{hermiteschen}} Matrix $A\in\Mat_{\CC}(n\times n)$ existiert eine Matrix $S\in\text{U}(n)$ mit
+        \[S^{-1}AS = \bar{S}^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{hermiteschen} Matrix $A\in\Mat_{\CC}(n\times n)$ existiert eine Matrix $S\in\text{U}(n)$ mit
+        \[S^{-1}AS = \overline{S}^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.5}
+    \end{field}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{hermiteschen} Matrix $A\in\Mat_{\CC}(n\times n)$ existiert eine Matrix \hide{$S\in\text{U}(n)$} mit
+        \[S^{-1}AS = \bar{S}^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{hermiteschen} Matrix $A\in\Mat_{\CC}(n\times n)$ existiert eine Matrix $S\in\text{U}(n)$ mit
+        \[S^{-1}AS = \overline{S}^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.5}
+    \end{field}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{hermiteschen} Matrix $A\in\Mat_{\CC}(n\times n)$ existiert eine Matrix $S\in\text{U}(n)$ mit \dots
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Matrizen}
+
+        Zu jeder \textbf{hermiteschen} Matrix $A\in\Mat_{\CC}(n\times n)$ existiert eine Matrix $S\in\text{U}(n)$ mit
+        \[S^{-1}AS = \overline{S}^TAS = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.5}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{812a96d5-4323-43af-80d4-1227d16c208f}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder symmetrischen Bilinearform $\beta$ auf einem endlich-dimensionalen euklidischen Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert \hide{eine Orthonormalbasis} $B$ mit
+        \[M_B(\beta) = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder symmetrischen Bilinearform $\beta$ auf einem endlich-dimensionalen euklidischen Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert eine Orthonormalbasis $B$, in der gilt:
+        \[M_B(\beta) = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.6}
+    \end{field}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder symmetrischen Bilinearform $\beta$ auf einem endlich-dimensionalen euklidischen Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert eine Orthonormalbasis $B$, in der gilt: \dots
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder symmetrischen Bilinearform $\beta$ auf einem endlich-dimensionalen euklidischen Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert eine Orthonormalbasis $B$, in der gilt:
+        \[M_B(\beta) = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.6}
+    \end{field}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder hermiteschen Sesquilinearform $\beta$ auf einem endlich-dimensionalen unitären Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert \hide{eine Orthonormalbasis $B$} mit:
+        \[M_B(\beta) = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder hermiteschen Sesquilinearform $\beta$ auf einem endlich-dimensionalen unitären Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert eine Orthonormalbasis $B$, in der gilt:
+        \[M_B(\beta) = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.6}
+    \end{field}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder hermiteschen Sesquilinearform $\beta$ auf einem endlich-dimensionalen unitären Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert eine Orthonormalbasis $B$, in der gilt: \dots
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Formen}
+
+        Zu jeder hermiteschen Sesquilinearform $\beta$ auf einem endlich-dimensionalen unitären Vektorraum $(V,\scprod{\cdot}{\cdot})$ existiert eine Orthonormalbasis $B$, in der gilt:
+        \[M_B(\beta) = \begin{pmatrix}
+            a_1&&\text{\huge 0}\\
+            & \ddots&\\
+            \smash{\text{\huge 0}}&& a_n
+        \end{pmatrix}\]
+        für gewisse $a_i\in\RR$.
+        \cite{Satz 12.6}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Def}
+    \xplain{304525a1-aaed-4d28-93f4-7be8c6841bb1}
+
+    \begin{field}
+        Sei $V$ ein endlich-dimensionaler reeller Vektorraum und $\beta$ eine Bilinearform auf $V$.\\
+        Die assoziierte \textbf{quadratische Abbildung} ist \dots
+    \end{field}
+    \begin{field}
+        Sei $V$ ein endlich-dimensionaler reeller Vektorraum und $\beta$ eine Bilinearform auf $V$.\\
+        Die assoziierte \textbf{quadratische Abbildung} ist
+        \begin{align*}
+            q_{\beta}: &V \longrightarrow \RR\\
+            &\vec{v} \mapsto \beta(\vec{v},\vec{v})
+        \end{align*}
+        \cite{Def 12.7}
+    \end{field}
+
+    \begin{field}
+        Sei $V$ ein endlich-dimensionaler reeller Vektorraum und $\beta$ eine Bilinearform auf $V$.\\
+        Die assoziierte \textbf{reelle affine Quadrik} ist \dots
+    \end{field}
+    \begin{field}
+        Sei $V$ ein endlich-dimensionaler reeller Vektorraum und $\beta$ eine Bilinearform auf $V$.\\
+        Die assoziierte \textbf{reelle affine Quadrik} ist die Menge
+        \[Q_{\beta} := \{\vec{v}\in V \ \vert \  \beta(\vec{v},\vec{v}) = 1\}\]
+        \cite{Def 12.7}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{3754bb2e-25f8-4d9a-bc3e-5418a61ed780}
+
+    \begin{field}
+        \textbf{Hauptachsentransformation für Quadriken}
+
+        Jede reelle affine Quadrik in einem euklidischen Vektorraum $(V,\scprod{\cdot}{\cdot})$ hat bezüglich einer geeigneten Orthonormalbasis $(\vec{b_1,\dots,b_n})$ von $V$ die Form \dots
+    \end{field}
+    \begin{field}
+        \textbf{Hauptachsentransformation für Quadriken}
+
+        Jede reelle affine Quadrik in einem \textbf{euklidischen} Vektorraum $(V,\scprod{\cdot}{\cdot})$ hat bezüglich einer geeigneten Orthonormalbasis $(\vec{b_1,\dots,b_n})$ von $V$ die Form
+        \[Q = \{\sum_{i=1}^n x_i\vec{b_i}\in V \ \vert \ \sum a_ix_i^2 = 1\}\]
+        für gewisse $a_i\in \RR$.
+        \cite{Satz 12.8}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{b5290b76-3aa7-435f-bbb1-6b0a9d3294ee}
+
+    \begin{field}
+        \textbf{Trägheitssatz von Sylvester}
+
+        Jede reelle symmetrische Matrix $A$ ist kongruent zu einer Diagonalmatrix der Form \dots
+    \end{field}
+    \begin{field}
+        \textbf{Trägheitssatz von Sylvester}
+
+        Jede reelle symmetrische Matrix $A$ ist kongruent zu einer Diagonalmatrix der Form
+        \[\left(\begin{smallmatrix}
+            +1\\
+            &\ddots\\
+            &&+1\\
+            &&&-1\\
+            &&&&\ddots\\
+            &&&&&-1\\
+            &&&&&&0\\
+            &&&&&&&\ddots\\
+            &&&&&&&&0
+        \end{smallmatrix}\right)\]
+        Die Anzahl der $+1$-, $-1$- und $0$-Einträge ist dabei durch $A$ eindeutig bestimmt.
+        \cite{Satz 12.9}
+    \end{field}
+\end{note}
 \end{document}
