Add cards for lecture 9

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -2016,5 +2016,91 @@
 \end{note}
 
 %%%%%%%%% Vorlesung 9 %%%%%%%%%%%%
+\begin{note}
+    \tags{Satz}
+    \xplain{f84dc2fc-8eb1-4c7b-a9f5-aafbb11fc382}
+
+    \begin{field}
+        \textbf{Lemma von Bézout}\\
+        In jedem euklidischen Ring gilt:
+        \[c \sim \text{ggT}(a,b) \Rightarrow \phantom{\exists x,y\colon c = xa + yb}\]
+    \end{field}
+    \begin{field}
+        \textbf{Lemma von Bézout}\\
+        In jedem euklidischen Ring gilt:
+        \[c \sim \text{ggT}(a,b) \Rightarrow  \exists x,y \colon c = xa + yb\]
+        \cite{Lemma 13.13}
+    \end{field}
+
+    \begin{field}
+        In jedem euklidischen Ring gilt:
+        \[a, b \text{ teilerfremd } \Leftrightarrow \phantom{\exists x,y\colon 1=x\cdot a + y\cdot b}\]
+    \end{field}
+    \begin{field}
+        In jedem euklidischen Ring gilt:
+        \[a, b \text{ teilerfremd } \Leftrightarrow \exists x,y\colon 1=x\cdot a + y\cdot b\]
+        \cite{Korollar 13.14}
+    \end{field}
+
+    \begin{field}
+        In jedem euklidischen Ring gilt:
+        \[\phantom{a, b \text{ teilerfremd }} \Leftrightarrow \exists x,y\colon 1=x\cdot a + y\cdot b\]
+    \end{field}
+    \begin{field}
+        In jedem euklidischen Ring gilt:
+        \[a, b \text{ teilerfremd } \Leftrightarrow \exists x,y\colon 1=x\cdot a + y\cdot b\]
+        \cite{Korollar 13.14}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Def}
+    \xplain{1a1b1607-0506-4438-b2a4-e0f89c3a2089}
+
+    \xfield{
+        Sei $R$ ein Integritätsring.\\
+        Ein Element $p \in R\setminus (R^\times \cup \{0\})$ ist \textbf{irreduzibel}, falls \dots
+    }
+    \begin{field}
+        Sei $R$ ein Integritätsring.\\
+        Ein Element $p \in R\setminus (R^\times \cup \{0\})$ ist \textbf{irreduzibel}, falls für $a,b\in R$ gilt:
+        \[p = a\cdot b \Rightarrow (a\in R^\times \text{ oder } b\in R^\times)\]
+        \cite{Def. 13.15}
+    \end{field}
+
+    \xfield{
+    Sei $R$ ein Integritätsring.\\
+    Ein Element $p \in R\setminus (R^\times \cup \{0\})$ ist \textbf{prim}, falls \dots
+    }
+    \begin{field}
+        Sei $R$ ein Integritätsring.\\
+        Ein Element $p \in R\setminus (R^\times \cup \{0\})$ ist \textbf{prim}, falls für $a,b\in R$ gilt:
+        \[p\vert ab \Rightarrow p\vert b \text{ oder } p\vert a\]
+        \cite{Def. 13.15}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{53b1954d-e3f5-4cd5-aa5c-d8266a638202}
+
+    \xfield{
+    In einem Integritätsring $R$ gilt: \hint{Zusammenhang prim und irreduzibel}\dots
+    }
+    \begin{field}
+        In einem Integritätsring $R$ gilt:
+        \[p \in R \text{ prim } \Rightarrow p \text{ irreduzibel}\]
+        \cite{Satz 13.16}
+    \end{field}
+
+    \xfield{
+    In einem euklidischen Ring $R$ gilt: \hint{Zusammenhang prim und irreduzibel}
+    }\dots
+    \begin{field}
+        In einem euklidischen Ring $R$ gilt:
+        \[p \in R \text{ prim } \Leftrightarrow p \text{ irreduzibel}\]
+        \cite{Satz 13.16}
+    \end{field}
+\end{note}
 
 \end{document}
