Add cards for lecture 10

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -2103,4 +2103,50 @@
     \end{field}
 \end{note}
 
+%%%%%%%%% Vorlesung 10 %%%%%%%%%%%%
+\begin{note}
+    \tags{Def}
+    \xplain{e5c8519c-02d7-4561-8a22-6aba87daa2b3}
+
+    \xfield{Eine \textbf{Primfaktorzerlegung} von $a\in R$ ist \dots}
+    \begin{field}
+        Eine \textbf{Primfaktorzerlegung} von $a\in R$ ist eine Darstellung von $a$ als Produkt
+        \[a = p_1p_2\cdots p_r\]
+        mit $r\in\NN$ und $p_i\in R$ prim.
+        \cite{Def. 13.19}
+    \end{field}
+
+    \xfield{Ein Integritätsring $R$ heißt \textbf{faktoriell},\\
+    wenn \dots}
+    \begin{field}
+        Ein Integritätsring $R$ heißt \textbf{faktoriell},\\
+        wenn jedes $a\in R\setminus(R^\times \cup \{0\})$ eine Primfaktorzerlegung besitzt.
+        \cite{Def. 13.19}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{89327ded-c7e4-49f1-a10f-9199de4016be}
+
+    \xfield{Falls eine \emph{Primfaktorzerlegung} von $a\in R$ existiert, so ist diese \dots}
+    \begin{field}
+        Falls eine \emph{Primfaktorzerlegung} von $a\in R$ existiert, so ist diese \emph{eindeutig} bis auf Reihenfolge der Faktoren und Assoziiertheit.
+        \cite{Satz 13.20}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{8a2baefd-95e9-4ac4-91d6-96ab9a9a7d0c}
+
+    \xfield{Für jeden Körper $K$ ist \hide{$K[X]$} faktoriell.}
+    \begin{field}
+        Für jeden Körper $K$ ist $K[X]$ faktoriell.
+        \cite{Satz 13.22}
+    \end{field}
+\end{note}
+
+
+\tags{LinA-II-14-Minimalpolynom}
 \end{document}
