Add cards for lecture 12

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -2311,4 +2311,59 @@
 \end{note}
 
 
+%%%%%%%%% Vorlesung 12 %%%%%%%%%%%%
+\begin{note}
+    \tags{Satz}
+    \xplain{707fad0f-485b-4dae-a099-bc9f6c2859b1}
+
+    \xfield{
+    \textbf{Spaltungssatz}\\
+    Sei $f$ ein Endomorphismus auf einem Vektorraum $V$.\\
+    Ist $\mu_f = P\cdot Q$ für zwei teilerfremde normierte Polynome $P$ und $Q$, so ist
+    \[V = \phantom{W_P \oplus W_Q}\]
+    }
+    \begin{field}
+        \textbf{Spaltungssatz}\\
+        Sei $f$ ein Endomorphismus auf einem Vektorraum $V$.\\
+        Ist $\mu_f = P\cdot Q$ für zwei teilerfremde normierte Polynome $P$ und $Q$, so ist \[V = W_P \oplus W_Q\]
+        für zwei $f$-stabile Untervektorräume $W_P$ und $W_Q$.
+        \cite{Satz 14.17}
+    \end{field}
+
+    \begin{field}
+        \textbf{Spaltungssatz}\\
+        Sei $f$ ein Endomorphismus auf einem Vektorraum $V$.\\
+        Ist $\mu_f = P\cdot Q$ für zwei teilerfremde normierte Polynome $P$ und $Q$, so ist \[V = W_P \oplus W_Q\]
+        für zwei $f$-stabile Untervektorräume $W_P$ und $W_Q$, für die gilt:
+        \[W_P = \phantom{\ker(P(f)) = \im(Q(f))} \text{ und } \mu_f\vert_{W_P} = P\]
+        \[W_Q = \phantom{\ker(Q(f)) = \im(P(f))} \text{ und } \mu_f\vert_{W_Q} = Q\]
+    \end{field}
+    \begin{field}
+        \textbf{Spaltungssatz}\\
+        Sei $f$ ein Endomorphismus auf einem Vektorraum $V$.\\
+        Ist $\mu_f = P\cdot Q$ für zwei teilerfremde normierte Polynome $P$ und $Q$, so ist \[V = W_P \oplus W_Q\]
+        für zwei $f$-stabile Untervektorräume $W_P$ und $W_Q$, für die gilt:
+        \[W_P = \ker(P(f)) = \im(Q(f)) \text{ und } \mu_f\vert_{W_P} = P\]
+        \[W_Q = \ker(Q(f)) = \im(P(f)) \text{ und } \mu_f\vert_{W_Q} = Q\]
+        \cite{Satz 14.17}
+    \end{field}
+
+    \begin{field}
+        \textbf{Spaltungssatz}\\
+        Sei $f$ ein Endomorphismus auf einem Vektorraum $V$.\\
+        Ist $\mu_f = P\cdot Q$ für zwei teilerfremde normierte Polynome $P$ und $Q$, so ist \[V = W_P \oplus W_Q\]
+        für zwei $f$-stabile Untervektorräume $W_P$ und $W_Q$, für die gilt:
+        \[W_P = \ker(P(f)) = \im(Q(f)) \text{ und } \dots\]
+        \[W_Q = \ker(Q(f)) = \im(P(f)) \text{ und } \dots\]
+    \end{field}
+    \begin{field}
+        \textbf{Spaltungssatz}\\
+        Sei $f$ ein Endomorphismus auf einem Vektorraum $V$.\\
+        Ist $\mu_f = P\cdot Q$ für zwei teilerfremde normierte Polynome $P$ und $Q$, so ist \[V = W_P \oplus W_Q\]
+        für zwei $f$-stabile Untervektorräume $W_P$ und $W_Q$, für die gilt:
+        \[W_P = \ker(P(f)) = \im(Q(f)) \text{ und } \mu_f\vert_{W_P} = P\]
+        \[W_Q = \ker(Q(f)) = \im(P(f)) \text{ und } \mu_f\vert_{W_Q} = Q\]
+        \cite{Satz 14.17}
+    \end{field}
+\end{note}
 \end{document}
